--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Checks whether a given string is null or empty (I'm learning)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/thiagoarrais/arrais-cool-package/issues"
   },
-  "homepage": "https://github.com/thiagoarrais/arrais-cool-package#readme"
+  "homepage": "https://github.com/thiagoarrais/arrais-cool-package#readme",
+  "devDependencies": {
+    "chai": "^4.0.2",
+    "mocha": "^3.4.2"
+  }
 }
